fixed options layout on mobile

--- a/scss/_editpage.scss
+++ b/scss/_editpage.scss
@@ -54,8 +54,10 @@
 
     .gear-button {
       @include extend("position-absolute");
-      top: 80px;
-      left: 2.535px;
+      &:not(.active) {
+        top: 80px;
+        left: 2.535px;
+      }
       z-index: 15;
       display: none;
       border: 1px solid #ccc;
@@ -120,7 +122,7 @@
 
     display: flex;
     min-height: 85vh;
-    max-height: 100%;
+    z-index: 1;
     flex-direction: column;
     justify-content: space-between;
 
