--- a/scss/_toolspage.scss
+++ b/scss/_toolspage.scss
@@ -35,7 +35,7 @@
     color: white;
     border: 3px dashed;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     &.display-4 {
       @include extend("display-4");
     }
